fix spacing

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -1,8 +1,8 @@
 /* @see https://codepen.io/andreasstorm/pen/lriga?editors=1100 */
 
 .navigation {
-  @include make-row();
-	  padding-top: 40px;
+  @extend .container;
+	padding-top: 40px;
 }
 
 .navigation__logo {
